Fix sidebar spacing in rtl.css

--- a/rtl.css
+++ b/rtl.css
@@ -135,34 +135,7 @@ li>ul {
 .widget_categories .children {
     margin-right: 1.5em;
 }
-.right-sidebar .site-main {
-    margin: 30px 0 30px 30px;
-}
-.left-sidebar .site-main {
-    margin: 30px 30px 30px 0;
-}
-.both-right.separate-containers .site-main {
-    margin: 30px 0 30px 30px;
-}
-.both-left.separate-containers .site-main {
-    margin: 30px 30px 30px 0;
-}
-.both-left .inside-left-sidebar,
-.both-right .inside-left-sidebar {
-    margin-left: 15px;
-}
-.both-left .inside-right-sidebar,
-.both-right .inside-right-sidebar {
-    margin-right: 15px;
-}
-.one-container.both-right .site-main,
-.one-container.right-sidebar .site-main {
-    margin-left: 60px;
-}
-.one-container.both-left .site-main,
-.one-container.left-sidebar .site-main {
-    margin-right: 60px;
-}
+
 .widget_nav_menu ul ul,
 .widget_pages ul ul {
     margin-right: 1em;
